--- a/wxxd/sale/quote_check.ui
+++ b/wxxd/sale/quote_check.ui
@@ -16,8 +16,20 @@
   <property name="toolTip">
    <string/>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,2">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="Button_pass">
@@ -107,7 +119,7 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0">
+   <item>
     <widget class="QTableWidget" name="Quote_list">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -161,8 +173,103 @@
      </column>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QTableView" name="tableView"/>
+   <item>
+    <widget class="QTableWidget" name="Quote_detail">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>报价明细</string>
+     </property>
+     <column>
+      <property name="text">
+       <string>公司名称</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>报价单号</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>序号</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>名称</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>制造标准</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>规格型号</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>材质</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>数量</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>工作令号</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>件号</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>单价</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>总价</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>单重</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>公斤价</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>加工费</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>其他费用</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>备注</string>
+      </property>
+     </column>
+    </widget>
    </item>
   </layout>
  </widget>
